[gd_scene load_steps=9 format=2]

[ext_resource path="res://res/mob_lv5.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Hit.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Hurt.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/EnenmyWeek.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0357

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.380392 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.337255 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.196078 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.6, 0.6 ), Vector2( 0.4, 0.4 ), Vector2( 0.6, 0.6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.23597, -15.338 ), Vector2( 0, 0 ), Vector2( 0, -16.9897 ), Vector2( 0, 0 ), Vector2( 0, -17.698 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -15.7668 ), Vector2( 0, 0 ), Vector2( 0, -17.023 ), Vector2( 0, 0 ), Vector2( -0.297302, -18.5863 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Hurt/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Hurt/CollisionShape2D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, -8 ), Vector2( 0, -17 ), Vector2( 0, -9 ), Vector2( 0, 0 ), Vector2( 1, -9 ), Vector2( 0, -18 ), Vector2( 1, -9 ), Vector2( 0, 0 ), Vector2( -1, -10 ), Vector2( 0, -19 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Hit/CollisionShape2D:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, -15 ), Vector2( 0, -7 ), Vector2( -1, -2.84217e-14 ), Vector2( 0, -9 ), Vector2( 0, -19 ), Vector2( 0, -8 ), Vector2( 0, -9.53674e-07 ), Vector2( 0, -9 ), Vector2( 0, -20 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Hit/CollisionShape2D:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.04444, 1.04444 ), Vector2( 1.02222, 1.02222 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1.17778, 1.17778 ), Vector2( 1.15556, 1.15556 ), Vector2( 1.13333, 1.13333 ), Vector2( 1.11111, 1.11111 ), Vector2( 1.2, 1.2 ), Vector2( 1.4, 1.4 ), Vector2( 1.04444, 1.04444 ) ]
}

[node name="EnenmyWeek" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )

[node name="Hit" parent="." instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="Hit" index="0"]
scale = Vector2( 1.04444, 1.04444 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]
collision_layer = 0

[node name="CollisionPolygon2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.403922 )

[node name="Hurt" parent="." instance=ExtResource( 3 )]
collision_layer = 32
collision_mask = 0
show_hit = false

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 10
[connection signal="area_entered" from="Hurt" to="." method="_on_Hurt_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hit"]

[editable path="PlayerDetectionZone"]

[editable path="Stats"]
